syntax = "proto3";

package voide.v1;

message UserText { string text = 1; }
message PromptText { string text = 1; }
message LLMText { string text = 1; }
message AnyBlob { bytes data = 1; }

message Port {
  string port = 1;
  repeated string types = 2;
}

message NodePort {
  string node = 1;
  string port = 2;
}

message Node {
  string id = 1;
  string type = 2;
  string name = 3;
  string params_json = 4;
  repeated Port in = 5;
  repeated Port out = 6;
}

message Edge {
  string id = 1;
  NodePort from = 2;
  NodePort to = 3;
  string label = 4;
  string type = 5;
}

message Flow {
  string id = 1;
  string version = 2;
  repeated Node nodes = 3;
  repeated Edge edges = 4;
}
